{
    "name": "MouseInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "986dd60e-f536-4851-9d0f-9075f628aa5b",
            "actions": [
                {
                    "name": "MouseClic",
                    "type": "Button",
                    "id": "5763f04b-95b6-4689-b9f1-c82ff67ce7d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4284027c-49e8-4873-ba64-8b6b6068ae7b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c85e4a7-8d4d-4e53-9f40-3005c47c6d05",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07ff56d-946d-49c4-9263-5c4632369f9e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}